default/objects/Trigger_Log__e/Trigger_Log__e.object-meta.xml
<CustomObject>
    <description>A logging event originating from an apex trigger</description>
    <label>Trigger Log</label>
    <pluralLabel>Trigger Logs</pluralLabel>
</CustomObject>