default/objects/Trigger_Log__e/fields/Context__c.field-meta.xml
<CustomField>
    <fullName>Context__c</fullName>
    <label>Trigger Context</label>
    <length>100</length>
    <type>Text</type>
</CustomField>