default/objects/Trigger_Log__e/fields/Log_Level__c.field-meta.xml
<CustomField>
    <fullName>Log_Level__c</fullName>
    <label>Log Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>INFO</fullName>
            </value>
            <value>
                <fullName>WARNING</fullName>
            </value>
            <value>
                <fullName>ERROR</fullName>
            </value>
            <value>
                <fullName>SUCCESS</fullName>
            </value>
        </valueSetDefinition>
        <valueSetType>Defined</valueSetType>
    </valueSet>
</CustomField>