default/objects/Trigger_Log__e/fields/Related_Record_Ids__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Ids__c</fullName>
    <label>Related Record Ids (CSV)</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>