default/objects/Trigger_Log__e/fields/SObject_Type__c.field-meta.xml
<CustomField>
    <fullName>SObject_Type__c</fullName>
    <label>SObject Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>