default/objects/Trigger_Log__e/fields/Trigger_Name__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Name__c</fullName>
    <label>Trigger Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>