default/objects/Trigger_Log__e/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <description>The id of the user that triggered the even that spawned this log</description>
    <label>User</label>
    <length>20</length>
    <type>Text</type>
</CustomField>